Bug 1236364 - Don't reuse existing richlistitem in urlbar when handling a delete. r=mak a=sylvestre